--- a/app/src/main/res/layout/item_container_video.xml
+++ b/app/src/main/res/layout/item_container_video.xml
@@ -2,72 +2,62 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@android:color/background_dark">
-
+    xmlns:tool="http://schemas.android.com/tools"
+    android:background="@color/colorBlack"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <VideoView
         android:id="@+id/videoView"
-        android:layout_height="0dp"
         android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        />
-    
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <ProgressBar
-        android:id="@+id/videoProgressBar"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:id="@+id/progressBar"
+        android:indeterminateTint="@color/colorWhite"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginBottom="30dp"
-        android:layout_marginEnd="5dp"
-        android:orientation="vertical"
+        android:id="@+id/tvTitle"
+        app:layout_constraintBottom_toTopOf="@id/tvDesc"
+        app:layout_constraintStart_toStartOf="parent"
+        tool:text="Title"
+        android:textSize="25sp"
+        android:textColor="@color/colorWhite"
+        android:textStyle="bold"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingTop="10dp"
+        android:shadowColor="@color/colorBlack"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="15"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvDesc"
         app:layout_constraintBottom_toBottomOf="parent"
-        >
-        
-        <TextView
-            android:id="@+id/textVideoTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingStart="5dp"
-            android:paddingEnd="5dp"
-            android:paddingTop="5dp"
-            android:shadowColor="@android:color/black"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="15"
-            android:textColor="@android:color/white"
-            android:textSize="25dp"
-            android:textStyle="bold"
-            />
-        <TextView
-            android:id="@+id/textVideoDescription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingStart="5dp"
-            android:paddingEnd="5dp"
-            android:paddingTop="5dp"
-            android:shadowColor="@android:color/black"
-            android:shadowDy="0"
-            android:shadowDx="0"
-            android:shadowRadius="15"
-            android:textColor="@android:color/white"
-            android:textSize="16sp"/>
-
-
-    </LinearLayout>
-
-
+        app:layout_constraintStart_toStartOf="parent"
+        tool:text="Description"
+        android:textSize="14sp"
+        android:textColor="@color/colorWhite"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingBottom="10dp"
+        android:shadowColor="@color/colorBlack"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="15"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
